decompiler/tests/snapshots/test_tool__x86_64_callconv__func073.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func073 0x40126c+7 (file 0x126c)
          40126c: 4c 89 ca                mov rdx,r9
          40126f: 4c 89 c0                mov rax,r8
          401272: c3                      ret

function type: "func073" func (arg0 *void <TypeID(1v1)>,
                               arg1 *void <TypeID(1v1)>,
                               arg2 small <TypeID(784v1)>,
                               arg3 small <TypeID(784v1)>) small <TypeID(784v1)>
0 warnings.


mil program = 
program  86 instrs
                 0 r12 <- Ancestral(AncestralName("stack_bottom"))
                 1 r2 <- Ancestral(AncestralName("CF"))
                 2 r3 <- Ancestral(AncestralName("PF"))
                 3 r4 <- Ancestral(AncestralName("AF"))
                 4 r5 <- Ancestral(AncestralName("ZF"))
                 5 r6 <- Ancestral(AncestralName("SF"))
                 6 r7 <- Ancestral(AncestralName("TF"))
                 7 r8 <- Ancestral(AncestralName("IF"))
                 8 r9 <- Ancestral(AncestralName("DF"))
                 9 r10 <- Ancestral(AncestralName("OF"))
                10 r11 <- Ancestral(AncestralName("RBP"))
                11 r12 <- Ancestral(AncestralName("RSP"))
                12 r13 <- Ancestral(AncestralName("RIP"))
                13 r14 <- Ancestral(AncestralName("RDI"))
                14 r15 <- Ancestral(AncestralName("RSI"))
                15 r16 <- Ancestral(AncestralName("RAX"))
                16 r17 <- Ancestral(AncestralName("RBX"))
                17 r18 <- Ancestral(AncestralName("RCX"))
                18 r19 <- Ancestral(AncestralName("RDX"))
                19 r20 <- Ancestral(AncestralName("R8"))
                20 r21 <- Ancestral(AncestralName("R9"))
                21 r22 <- Ancestral(AncestralName("R10"))
                22 r23 <- Ancestral(AncestralName("R11"))
                23 r24 <- Ancestral(AncestralName("R12"))
                24 r25 <- Ancestral(AncestralName("R13"))
                25 r26 <- Ancestral(AncestralName("R14"))
                26 r27 <- Ancestral(AncestralName("R15"))
                27 r28 <- Ancestral(AncestralName("ZMM0"))
                28 r29 <- Ancestral(AncestralName("ZMM1"))
                29 r30 <- Ancestral(AncestralName("ZMM2"))
                30 r31 <- Ancestral(AncestralName("ZMM3"))
                31 r32 <- Ancestral(AncestralName("ZMM4"))
                32 r33 <- Ancestral(AncestralName("ZMM5"))
                33 r34 <- Ancestral(AncestralName("ZMM6"))
                34 r35 <- Ancestral(AncestralName("ZMM7"))
                35 r36 <- Ancestral(AncestralName("ZMM8"))
                36 r37 <- Ancestral(AncestralName("ZMM9"))
                37 r38 <- Ancestral(AncestralName("ZMM10"))
                38 r39 <- Ancestral(AncestralName("ZMM11"))
                39 r40 <- Ancestral(AncestralName("ZMM12"))
                40 r41 <- Ancestral(AncestralName("ZMM13"))
                41 r42 <- Ancestral(AncestralName("ZMM14"))
                42 r43 <- Ancestral(AncestralName("ZMM15"))
                43 r45 <- Undefined
                44 r46 <- Undefined
                45 r47 <- Undefined
                46 r48 <- Undefined
                47 r49 <- Undefined
                48 r50 <- Undefined
                49 r51 <- Undefined
                50 r52 <- Undefined
                51 r53 <- Undefined
                52 r54 <- Undefined
                53 r55 <- Undefined
                54 r56 <- Undefined
                55 r57 <- Undefined
                56 r58 <- Undefined
                57 r59 <- Undefined
                58 r60 <- Undefined
                59 r61 <- Undefined
                60 r62 <- Undefined
                61 r63 <- Undefined
                62 r64 <- Undefined
                63 r65 <- Undefined
                64 r45 <- Ancestral(AncestralName("arg0"))
                65 r14 <- Get(r45)
                66 r46 <- Ancestral(AncestralName("arg1"))
                67 r15 <- Get(r46)
                68 r47 <- Ancestral(AncestralName("arg2"))
                69 r48 <- Part { src: r47, offset: 0, size: 8 }
                70 r19 <- Get(r48)
                71 r49 <- Part { src: r47, offset: 8, size: 8 }
                72 r18 <- Get(r49)
                73 r50 <- Ancestral(AncestralName("arg3"))
                74 r51 <- Part { src: r50, offset: 0, size: 8 }
                75 r20 <- Get(r51)
                76 r52 <- Part { src: r50, offset: 8, size: 8 }
                77 r21 <- Get(r52)
0x40126c:
                78 r19 <- Get(r21)
0x40126f:
                79 r16 <- Get(r20)
0x401272:
                80 r45 <- Void
                81 r45 <- Concat { lo: r45, hi: r16 }
                82 r45 <- Concat { lo: r45, hi: r19 }
                83 r45 <- Part { src: r45, offset: 0, size: 16 }
                84 r47 <- SetReturnValue(r45)
                85 r47 <- Control(Ret)


ssa pre-xform:
ssa program  86 instrs
.B0:    ;;  → Always(Return).
  (  2)  r73 <- Ancestral(AncestralName("arg3"))
         r74 <- Part { src: r73, offset: 0, size: 8 }
         r76 <- Part { src: r73, offset: 8, size: 8 }
         r81 <- Concat { lo: r80, hi: r74 }
         r82 <- Concat { lo: r81, hi: r76 }
         r83 <- Part { src: r82, offset: 0, size: 16 }
         r84 <- SetReturnValue(r83)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r73, r74, r76, r80, r81, r82, r83, r84]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  86 instrs
.B0:    ;;  → Always(Return).
  (  2)  r73 <- Ancestral(AncestralName("arg3"))
         r74 <- Part { src: r73, offset: 0, size: 8 }
         r76 <- Part { src: r73, offset: 8, size: 8 }
         r82 <- Concat { lo: r74, hi: r76 }
         r84 <- SetReturnValue(r82)



T0: {
  ;
  return pre:arg3[16 .. 8] ++ pre:arg3[8 .. 0]
}
